# sim_cf2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/: CrtpUtils.h  crtp.h  gazebo_cf_handler_plugin.h  gazebo_mr_plugin.h  gazebo_tdoa_plugin.h  posixmq_wrapper.h
launch/: main.launch.xml  robot_state_publisher.launch.py  spawn_in_gazebo.launch.py  spawn_mav.launch.xml  start_gazebo_world.launch.py
models/lab_aux/: model.config  model.sdf
models/rotors_description/urdf/: component_snippets.xacro  crazyflie.xacro  crazyflie_base.xacro  multirotor_base.xacro
msgs/: MrSensorData.msg  Tdoa.proto  multi_ranger_sensor_data.proto
scripts/: run_cfs.sh
src/: gazebo_cf_handler_plugin.cpp  gazebo_mr_plugin.cpp  gazebo_odometry_plugin.cpp  gazebo_tdoa_plugin.cpp  posixmq_wrapper.c
worlds/: basic.world  lab_aux.world
